--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(cs344_assignment_1 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(cs344_assignment_1 src/main.c src/logger.c)
+add_executable(burrelni_program1 src/main.c src/logger.c)
 
-target_include_directories(cs344_assignment_1 PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(burrelni_program1 PUBLIC ${CMAKE_SOURCE_DIR}/include)
